--- a/index.html
+++ b/index.html
@@ -1134,6 +1134,128 @@ Thank you !
 <script nomodule src="https://unpkg.com/ionicons@7.2.2/dist/ionicons/ionicons.js"></script>
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+
+  <!-- VISIT US - Full black background, black card, white/gold text, big icons, modern and inviting layout, responsive -->
+
+<div style="height:90px;"></div>
+<section id="visit" style="width:100%;background:#000;padding:0 0 70px 0;">
+  <div style="max-width:1100px;margin:0 auto;">
+    <h2 style="font-family:'Righteous',cursive;font-size:38px;color:#ffd700;letter-spacing:1px;text-align:center;margin:0 0 36px 0;">
+      🗺️ Visit Us
+    </h2>
+    <div style="
+      display:flex;
+      flex-wrap:wrap;
+      gap:40px;
+      background:#000;
+      border-radius:28px;
+      box-shadow:0 4px 60px 0 rgba(255,215,0,0.08), 0 1.5px 10px 0 rgba(0,0,0,0.16);
+      padding:42px 38px 38px 38px;
+      align-items:stretch;
+      ">
+      <!-- Left Block: Info & Contact -->
+      <div style="flex:1;min-width:280px;max-width:370px;display:flex;flex-direction:column;gap:36px;">
+        <!-- Address -->
+        <div>
+          <div style="font-size:20px;font-weight:900;display:flex;align-items:center;gap:12px;color:#ffd700;">
+            <ion-icon name="location-sharp" style="font-size:27px;vertical-align:-5px;"></ion-icon>
+            Address
+          </div>
+          <div style="font-size:16.5px;color:#fff;margin-top:7px;line-height:1.6;">
+            <b>India Palace</b><br>
+            123 Curry Lane, Spice Market Plaza<br>
+            New York, NY 10001
+          </div>
+        </div>
+        <!-- Hours -->
+        <div>
+          <div style="font-size:20px;font-weight:900;display:flex;align-items:center;gap:12px;color:#ffd700;">
+            <ion-icon name="time-sharp" style="font-size:27px;vertical-align:-5px;"></ion-icon>
+            Opening Hours
+          </div>
+          <div style="font-size:16.5px;color:#fff;margin-top:7px;line-height:1.5;">
+            <div>Mon–Fri: 11:00 AM – 10:00 PM</div>
+            <div>Sat–Sun: 12:00 PM – 11:00 PM</div>
+            <div>🍽️ Lunch Buffet: Weekdays 12:00 PM – 3:00 PM</div>
+          </div>
+        </div>
+        <!-- Contact -->
+        <div>
+          <div style="font-size:20px;font-weight:900;display:flex;align-items:center;gap:12px;color:#ffd700;">
+            <ion-icon name="call-sharp" style="font-size:27px;vertical-align:-5px;"></ion-icon>
+            Contact
+          </div>
+          <div style="font-size:16.5px;color:#fff;margin-top:7px;line-height:1.5;">
+            <div>☎️ <a href="tel:1234567890" style="color:#ffd700;text-decoration:none;">(123) 456-7890</a></div>
+            <div>📧 <a href="mailto:info@indiapalace.com" style="color:#ffd700;text-decoration:none;">info@indiapalace.com</a></div>
+            <div>📲 <a href="https://wa.me/11234567890" style="color:#ffd700;text-decoration:none;">+1 123-456-7890</a></div>
+          </div>
+        </div>
+        <!-- Socials -->
+        <div>
+          <div style="font-size:20px;font-weight:900;display:flex;align-items:center;gap:12px;color:#ffd700;">
+            <ion-icon name="share-social-sharp" style="font-size:27px;vertical-align:-5px;"></ion-icon>
+            Connect
+          </div>
+          <div style="margin-top:10px;font-size:20px;display:flex;gap:18px;">
+            <a href="#" title="Instagram" style="color:#ffd700;">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+            <a href="#" title="Facebook" style="color:#ffd700;">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+            <a href="#" title="TikTok" style="color:#ffd700;">
+              <ion-icon name="logo-tiktok"></ion-icon>
+            </a>
+            <a href="#" title="X/Twitter" style="color:#ffd700;">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+            <a href="#" title="Google Business" style="color:#ffd700;">
+              <ion-icon name="location"></ion-icon>
+            </a>
+          </div>
+        </div>
+      </div>
+      <!-- Right Block: Map + Contact Form -->
+      <div style="flex:2;min-width:300px;max-width:600px;display:flex;flex-direction:column;gap:30px;">
+        <!-- Map -->
+        <div>
+          <div style="font-size:20px;font-weight:900;display:flex;align-items:center;gap:12px;color:#ffd700;margin-bottom:10px;">
+            <ion-icon name="map-sharp" style="font-size:27px;vertical-align:-5px;"></ion-icon>
+            Map & Directions
+          </div>
+          <div style="border-radius:19px;overflow:hidden;box-shadow:0 2px 26px 0 rgba(255,215,0,0.11);">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3047.458131577668!2d44.5079643!3d40.1787136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x406abdcdb68ead49%3A0x85e4f03c53271ab1!2sIndia%20Palace%20Restaurant!5e0!3m2!1sen!2sus!4v1717511151811!5m2!1sen!2sus"
+              width="100%" height="170" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="India Palace Map"></iframe>
+          </div>
+        </div>
+        <!-- Contact Form -->
+        <div>
+          <div style="font-size:20px;font-weight:900;display:flex;align-items:center;gap:12px;color:#ffd700;margin-bottom:10px;">
+            <ion-icon name="mail-sharp" style="font-size:27px;vertical-align:-5px;"></ion-icon>
+            Quick Contact
+          </div>
+          <form style="display:grid;gap:10px;max-width:390px;"
+            onsubmit="event.preventDefault(); alert('Thank you for contacting India Palace! We will respond soon.'); this.reset();">
+            <input type="text" name="name" placeholder="Your Name" required style="padding:10px 14px;border-radius:14px;border:1px solid #ffd700;background:rgba(20,20,26,0.93);color:#fff;font-size:15px;">
+            <input type="email" name="email" placeholder="Your Email" required style="padding:10px 14px;border-radius:14px;border:1px solid #ffd700;background:rgba(20,20,26,0.93);color:#fff;font-size:15px;">
+            <input type="tel" name="phone" placeholder="Your Phone" style="padding:10px 14px;border-radius:14px;border:1px solid #ffd700;background:rgba(20,20,26,0.93);color:#fff;font-size:15px;">
+            <textarea name="message" placeholder="Message (reservation, feedback, event inquiry)" rows="3" required style="padding:10px 14px;border-radius:14px;border:1px solid #ffd700;background:rgba(20,20,26,0.93);color:#fff;font-size:15px;"></textarea>
+            <button type="submit" style="background:#ffd700;color:#111;font-weight:800;font-size:16px;border:none;padding:12px 0;border-radius:14px;cursor:pointer;transition:background 0.15s;">Send Message</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Ionicons CDN -->
+<script type="module" src="https://unpkg.com/ionicons@7.2.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.2.2/dist/ionicons/ionicons.js"></script>
+
+
   <script>
     var swiper = new Swiper('.mySwiper', {
       slidesPerView: 4,
