--- a/index.html
+++ b/index.html
@@ -930,102 +930,132 @@ Thank you !
 </section>
 
 
- <!-- Reservations Section: Matches About Us size (width:1100px, height:420px), title centered above, yellow button with black text and hover, extra space before section, revised subtitle and description order as requested -->
+<!-- RESERVATIONS SECTION - Black/gold, modern, three vertically stacked images on left, rest unchanged -->
 
-<!-- Extra space before the section -->
 <div style="height:90px;"></div>
-
-<section id="reservations" style="width:1100px;min-width:1100px;max-width:1100px;margin:0 auto 0 auto;position:relative;">
-  <!-- Centered Title Over Whole Section, with extra space below -->
-  <h2 style="
-    font-family:'Righteous',cursive;
-    font-size:38px;
-    color:#fff;
-    letter-spacing:1px;
-    text-align:center;
-    margin:0 auto 32px auto;
-    width:100%;
-    ">
-    📅 Reservations
-  </h2>
-  <div style="display:flex;flex-direction:row;align-items:stretch;height:420px;">
-    <!-- Left: Photo -->
+<section id="reservations" style="width:100%;background:#000;padding:0 0 70px 0;">
+  <div style="max-width:1100px;margin:0 auto;">
+    <h2 style="font-family:'Righteous',cursive';font-size:38px;color:#ffd700;letter-spacing:1px;text-align:center;margin:0 0 36px 0;">
+      📅 Reservations
+    </h2>
     <div style="
-      flex:0 0 410px;
-      max-width:410px;
-      min-width:0;
-      position:relative;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      overflow:hidden;
-      height:100%;
-      border-radius:20px 0 0 20px;
-      ">
-      <img
-        src="https://cdn.pixabay.com/photo/2024/08/01/19/25/ai-generated-8938045_1280.jpg"
-        alt="Reservations Table"
-        style="
-          width:410px;
-          height:420px;
-          object-fit:cover;
-          display:block;
-          border-radius:20px 0 0 20px;
-          -webkit-mask-image: linear-gradient(to left, transparent 0%, black 17%, black 100%);
-          mask-image: linear-gradient(to left, transparent 0%, black 17%, black 100%);
-          background:#000;
-        "
-      >
-    </div>
-    <!-- Right: Text -->
-    <div style="
-      flex:1 1 0;
-      min-width:0;
       background:#000;
-      border-radius:0 20px 20px 0;
+      border-radius:28px;
+      box-shadow:0 4px 60px 0 rgba(255,215,0,0.08), 0 1.5px 10px 0 rgba(0,0,0,0.16);
+      padding:42px 38px 38px 38px;
       display:flex;
-      flex-direction:column;
-      justify-content:center;
-      align-items:flex-start;
-      height:100%;
-      padding:0 42px 0 42px;
-      box-sizing:border-box;
+      flex-wrap:wrap;
+      gap:38px;
+      align-items:stretch;
       ">
-      <div>
-        <!-- Subtitle first -->
-        <div style="font-size:21px;font-family:'Roboto',sans-serif;font-weight:600;margin-bottom:18px;color:#ffd700;">
-          Reserve Your Table Today
+      <!-- Photo Column: 3 vertically stacked images -->
+      <div style="flex:0.9;min-width:230px;max-width:330px;display:flex;flex-direction:column;gap:18px;align-items:flex-start;justify-content:flex-start;">
+        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=420&q=80"
+             alt="Elegant Table Reservation"
+             style="width:100%;max-width:315px;max-height:110px;object-fit:cover;border-radius:18px;box-shadow:0 2px 16px 0 rgba(255,215,0,0.10);border:2px solid #ffd700;"/>
+        <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?auto=format&fit=crop&w=420&q=80"
+             alt="Restaurant Ambiance"
+             style="width:100%;max-width:315px;max-height:110px;object-fit:cover;border-radius:18px;box-shadow:0 2px 16px 0 rgba(255,215,0,0.10);border:2px solid #ffd700;"/>
+        <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=420&q=80"
+             alt="Private Event Dining"
+             style="width:100%;max-width:315px;max-height:110px;object-fit:cover;border-radius:18px;box-shadow:0 2px 16px 0 rgba(255,215,0,0.10);border:2px solid #ffd700;"/>
+         <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=420&q=80"
+             alt="Private Event Dining"
+             style="width:100%;max-width:315px;max-height:110px;object-fit:cover;border-radius:18px;box-shadow:0 2px 16px 0 rgba(255,215,0,0.10);border:2px solid #ffd700;"/>
+         <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=420&q=80"
+             alt="Private Event Dining"
+             style="width:100%;max-width:315px;max-height:110px;object-fit:cover;border-radius:18px;box-shadow:0 2px 16px 0 rgba(255,215,0,0.10);border:2px solid #ffd700;"/>
+      </div>
+      <!-- Main Content -->
+      <div style="flex:2;min-width:320px;max-width:700px;display:flex;flex-direction:column;gap:34px;">
+        <!-- Intro + How to Reserve -->
+        <div style="display:flex;flex-wrap:wrap;gap:32px;">
+          <div style="flex:1;min-width:220px;">
+            <div style="font-size:20px;font-weight:900;display:flex;align-items:center;gap:12px;color:#ffd700;">
+              <ion-icon name="restaurant-sharp" style="font-size:27px;vertical-align:-5px;"></ion-icon>
+              Reserve Your Table at India Palace
+            </div>
+            <div style="font-size:16.5px;color:#fff;margin-top:7px;line-height:1.6;">
+              Whether it’s a romantic dinner, family gathering, or a special celebration — we’re ready to welcome you with warmth and flavor.<br>
+              Booking is quick and easy — online or by phone!
+            </div>
+          </div>
+          <div style="flex:1.2;min-width:210px;">
+            <div style="font-size:19px;font-weight:800;color:#ffd700;letter-spacing:1px;margin-bottom:8px;">
+              ✅ How to Reserve
+            </div>
+            <ul style="color:#fff;font-size:15.5px;list-style:none;padding:0;margin:0;line-height:2;">
+              <li>
+                <ion-icon name="call-sharp" style="color:#ffd700;vertical-align:-4px;font-size:20px;"></ion-icon>
+                <a href="tel:1234567890" style="color:#ffd700;text-decoration:none;">Call Us: (123) 456-7890</a>
+              </li>
+              <li>
+                <ion-icon name="laptop-outline" style="color:#ffd700;vertical-align:-4px;font-size:20px;"></ion-icon>
+                Book Online:
+                <a href="#" style="background:#ffd700;color:#111;padding:3px 18px;border-radius:12px;font-weight:700;margin-left:7px;text-decoration:none;transition:background 0.15s;">Reserve Now</a>
+              </li>
+              <li>
+                <ion-icon name="logo-whatsapp" style="color:#ffd700;vertical-align:-4px;font-size:20px;"></ion-icon>
+                <a href="https://wa.me/11234567890" style="color:#ffd700;text-decoration:none;">WhatsApp Us: +1 123-456-7890</a>
+              </li>
+              <li>
+                <ion-icon name="mail-sharp" style="color:#ffd700;vertical-align:-4px;font-size:20px;"></ion-icon>
+                <a href="mailto:reservations@indiapalace.com" style="color:#ffd700;text-decoration:none;">Email Requests: reservations@indiapalace.com</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <!-- Description just below subtitle -->
-        <div style="font-size:15.5px;color:#ccc;font-family:'Roboto',sans-serif;line-height:1.7;margin-bottom:24px;">
-          Planning a dinner out or a celebration? <b>Book a table</b> with us online or call us directly.
+        <!-- Divider -->
+        <div style="width:100%;height:1px;background:linear-gradient(90deg,#ffd700 10%,#fff0 100%);opacity:0.25;margin:3px 0 0 0;"></div>
+        <!-- Lower Content: Hours, Private Dining, Policy -->
+        <div style="display:flex;flex-wrap:wrap;gap:32px;">
+          <!-- Hours -->
+          <div style="flex:1;min-width:190px;">
+            <div style="font-size:19px;font-weight:800;color:#ffd700;letter-spacing:1px;margin-bottom:8px;">
+              🕒 Hours of Operation
+            </div>
+            <ul style="color:#fff;font-size:15.5px;list-style:none;padding:0;margin:0;line-height:2;">
+              <li>Monday – Friday: 11:00 AM – 10:00 PM</li>
+              <li>Saturday – Sunday: 12:00 PM – 11:00 PM</li>
+              <li>🍽️ Lunch Buffet: Weekdays 12:00 PM – 3:00 PM</li>
+            </ul>
+          </div>
+          <!-- Private Dining -->
+          <div style="flex:1.3;min-width:200px;">
+            <div style="font-size:19px;font-weight:800;color:#ffd700;letter-spacing:1px;margin-bottom:8px;">
+              🎉 Private Dining & Events
+            </div>
+            <div style="color:#fff;font-size:15.5px;margin-bottom:5px;">
+              Hosting a birthday, anniversary, or corporate dinner?<br>
+              We offer beautifully arranged private dining spaces for groups of 10 to 60 guests.
+            </div>
+            <ul style="color:#fff;font-size:15.5px;list-style:none;padding:0;margin:0 0 10px 0;line-height:2;">
+              <li><ion-icon name="leaf-sharp" style="color:#ffd700;vertical-align:-4px;font-size:19px;"></ion-icon> Custom menus available (vegetarian, Jain, Halal)</li>
+              <li><ion-icon name="flower-sharp" style="color:#ffd700;vertical-align:-4px;font-size:19px;"></ion-icon> Decoration & event planning assistance</li>
+              <li><ion-icon name="wine-sharp" style="color:#ffd700;vertical-align:-4px;font-size:19px;"></ion-icon> BYOB & catering options available</li>
+            </ul>
+            <a href="#" style="background:#ffd700;color:#111;padding:8px 22px;border-radius:18px;font-weight:700;text-decoration:none;transition:background 0.15s;font-size:15px;display:inline-block;">📩 Inquire Now</a>
+          </div>
+          <!-- Policy -->
+          <div style="flex:0.9;min-width:170px;">
+            <div style="font-size:19px;font-weight:800;color:#ffd700;letter-spacing:1px;margin-bottom:8px;">
+              <ion-icon name="lock-closed-sharp" style="color:#ffd700;vertical-align:-4px;font-size:19px;"></ion-icon>
+              Reservation Policy
+            </div>
+            <ul style="color:#fff;font-size:15.5px;list-style:none;padding:0;margin:0;line-height:2;">
+              <li>Walk-ins welcome, but reservations are recommended — especially on weekends and holidays.</li>
+              <li>Tables are held for 15 minutes past the reservation time.</li>
+            </ul>
+          </div>
         </div>
-        <ul style="list-style:none;padding:0 0 0 0;margin:0 0 26px 0;">
-          <li style="font-size:16.5px;margin-bottom:10px;display:flex;align-items:center;gap:9px;">
-            <span style="font-size:20px;">📞</span>
-            <a href="tel:+1234567890" style="color:#ffd700;text-decoration:none;font-weight:bold;">[Phone Number]</a>
-          </li>
-          <li style="font-size:16.5px;margin-bottom:10px;display:flex;align-items:center;gap:9px;">
-            <span style="font-size:20px;">🕒</span>
-            <span style="color:#fff;">Open Daily: <b>11 AM – 10 PM</b></span>
-          </li>
-          <li style="font-size:16.5px;display:flex;align-items:center;gap:9px;">
-            <span style="font-size:20px;">🎉</span>
-            <span style="color:#fff;">Hosting a party? <span style="color:#ffd700;font-weight:bold;">Ask about private dining</span>.</span>
-          </li>
-        </ul>
-        <!-- Yellow Reservation Button with black text and hover style -->
-        <a href="#"
-           class="yellow-btn"
-           style="display:inline-block;padding:12px 34px;background:#ffd700;color:#111;border-radius:22px;font-size:15.5px;font-family:'Roboto',sans-serif;font-weight:600;text-decoration:none;box-shadow:0 2px 10px 0 rgba(255,215,0,0.13);transition:background 0.18s, color 0.18s, box-shadow 0.18s, transform 0.18s;">
-          Reserve Online
-        </a>
       </div>
     </div>
   </div>
-  <!-- Extra space after section -->
-  <div style="height:48px;"></div>
 </section>
+
+<!-- Ionicons CDN -->
+<script type="module" src="https://unpkg.com/ionicons@7.2.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.2.2/dist/ionicons/ionicons.js"></script>
 
 
 <!-- Testimonials Section: Less box height, fixed width, soft yellow shadow behind blurred box, all other layout preserved -->
