--- a/index.html
+++ b/index.html
@@ -1285,6 +1285,69 @@ Thank you !
 <script type="module" src="https://unpkg.com/ionicons@7.2.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.2.2/dist/ionicons/ionicons.js"></script>
 
+<!-- FOOTER SECTION - Black/Gold, elegant, responsive, with logo, address, quick links, social icons, copyright -->
+
+<footer style="background:#000; color:#fff; padding:50px 0 25px 0; font-family:inherit;">
+  <div style="max-width:1150px;margin:0 auto;display:flex;flex-wrap:wrap;gap:38px;justify-content:space-between;align-items:flex-start;padding:0 18px 0 18px;">
+
+    <!-- Logo & Branding -->
+    <div style="flex:1;min-width:210px;max-width:300px;display:flex;flex-direction:column;gap:15px;">
+      <img src="https://static.thenounproject.com/png/4421155-200.png" alt="India Palace Logo" style="width:62px;height:62px;border-radius:50%;background:#111;border:2px solid #ffd700;object-fit:cover;box-shadow:0 1.5px 12px rgba(255,215,0,0.15);margin-bottom:8px;">
+      <span style="font-size:1.38rem;font-family:'Righteous',cursive;letter-spacing:1px;color:#ffd700;">India Palace</span>
+      <span style="font-size:15px;line-height:1.6;">Experience authentic Indian flavors and warm hospitality in the heart of New York.</span>
+    </div>
+
+    <!-- Address & Contact -->
+    <div style="flex:1.1;min-width:200px;max-width:280px;display:flex;flex-direction:column;gap:10px;">
+      <div style="font-weight:700;font-size:16.5px;color:#ffd700;margin-bottom:7px;">
+        <ion-icon name="location-sharp" style="vertical-align:-3px;font-size:21px;color:#ffd700;"></ion-icon> Address
+      </div>
+      <span style="font-size:15px;">123 Curry Lane, Spice Market Plaza<br>New York, NY 10001</span>
+      <div style="font-weight:700;font-size:16.5px;color:#ffd700;margin-top:12px;">
+        <ion-icon name="call-sharp" style="vertical-align:-3px;font-size:20px;color:#ffd700;"></ion-icon> Contact
+      </div>
+      <a href="tel:1234567890" style="color:#ffd700;font-size:15px;text-decoration:none;">(123) 456-7890</a><br>
+      <a href="mailto:info@indiapalace.com" style="color:#ffd700;font-size:15px;text-decoration:none;">info@indiapalace.com</a>
+    </div>
+
+    <!-- Quick Links -->
+    <div style="flex:1;min-width:160px;max-width:220px;display:flex;flex-direction:column;gap:10px;">
+      <div style="font-weight:700;font-size:16.5px;color:#ffd700;margin-bottom:7px;">
+        <ion-icon name="link-sharp" style="vertical-align:-3px;font-size:20px;color:#ffd700;"></ion-icon> Quick Links
+      </div>
+      <a href="#about" style="color:#fff;text-decoration:none;font-size:15px;margin-bottom:2px;transition:color 0.2s;">About Us</a>
+      <a href="#menu" style="color:#fff;text-decoration:none;font-size:15px;margin-bottom:2px;transition:color 0.2s;">Menu</a>
+      <a href="#visit" style="color:#fff;text-decoration:none;font-size:15px;margin-bottom:2px;transition:color 0.2s;">Visit Us</a>
+      <a href="#reservations" style="color:#fff;text-decoration:none;font-size:15px;margin-bottom:2px;transition:color 0.2s;">Reservations</a>
+      <a href="#events" style="color:#fff;text-decoration:none;font-size:15px;transition:color 0.2s;">Events</a>
+    </div>
+
+    <!-- Socials -->
+    <div style="flex:1;min-width:140px;max-width:220px;display:flex;flex-direction:column;gap:13px;">
+      <div style="font-weight:700;font-size:16.5px;color:#ffd700;margin-bottom:7px;">
+        <ion-icon name="share-social-sharp" style="vertical-align:-3px;font-size:20px;color:#ffd700;"></ion-icon> Connect
+      </div>
+      <div style="display:flex;gap:17px;margin-bottom:2px;">
+        <a href="#" title="Instagram" style="color:#ffd700;font-size:23px;"><ion-icon name="logo-instagram"></ion-icon></a>
+        <a href="#" title="Facebook" style="color:#ffd700;font-size:23px;"><ion-icon name="logo-facebook"></ion-icon></a>
+        <a href="#" title="TikTok" style="color:#ffd700;font-size:23px;"><ion-icon name="logo-tiktok"></ion-icon></a>
+        <a href="#" title="Twitter/X" style="color:#ffd700;font-size:23px;"><ion-icon name="logo-twitter"></ion-icon></a>
+        <a href="#" title="Google Map" style="color:#ffd700;font-size:23px;"><ion-icon name="location"></ion-icon></a>
+      </div>
+      <span style="font-size:14px;color:#fff7;">Follow us on social media</span>
+    </div>
+  </div>
+  <div style="width:100%;border-top:1px solid #222;margin:35px 0 0 0;"></div>
+  <div style="max-width:1150px;margin:0 auto;padding:18px 18px 0 18px;font-size:14.5px;display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:8px;">
+    <span style="color:#fff7;">&copy; 2025 India Palace. All Rights Reserved.</span>
+    <span>Website by <a href="#" style="color:#ffd700;text-decoration:none;">India Palace Team</a></span>
+  </div>
+</footer>
+
+<!-- Ionicons CDN for footer icons -->
+<script type="module" src="https://unpkg.com/ionicons@7.2.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.2.2/dist/ionicons/ionicons.js"></script>
+
 
   <script>
     var swiper = new Swiper('.mySwiper', {
