--- a/index.html
+++ b/index.html
@@ -11,26 +11,32 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
   <style>
-   body {
-  width: 1280px;
-  min-width: 1280px;
-  max-width: 1280px;
-  margin: 0 auto;
-  overflow-x: auto;
+ body, .container {
+  width: 100%;
+  min-width: unset;
+  max-width: 100%;
 }
-.container {
-  width: 1280px;
-  min-width: 1280px;
-  max-width: 1280px;
+
+.main-section {
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  padding-left: 5vw;
+  padding-top: 70px;
+}
+
+  .text-content, .image-content {
+    max-width: 100%;
+    width: 100%;
+    padding: 10px;
+  }
+  .restaurant-name { font-size: 8vw; }
+  .description { font-size: 4vw; }
+  .image-content img { height: 45vw; min-height: 140px; }
 }
     
     
-    {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background-color: black;
-      color: white;
-    }
+ 
 
     header {
       position: fixed;
@@ -69,25 +75,8 @@
       color: #d62828;
     }
 
-    .main-section {
-      display: flex;
-      align-items: center;
-      height: 100vh;
-      padding-left: 80px;
-      padding-top: 70px;
-    }
-
-    .text-content {
-      max-width: 600px;
-      background-color: #000000;
-      padding: 30px;
-      border-radius: 10px;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      flex-shrink: 0;
-    }
+   
+   
 
     .subtitle {
       font-size: 18px;
@@ -95,13 +84,7 @@
       color: white;
     }
 
-    .restaurant-name {
-      font-family: 'Righteous', cursive;
-      font-size: 60px;
-      margin: 0;
-      line-height: 1;
-      color: white;
-    }
+   
 
     .description {
       font-family: 'Roboto', sans-serif;
