--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-<meta name="viewport" content="width=1280, user-scalable=yes">  <title>India Palace</title>
+<meta name="viewport" content="width=1200, user-scalable=yes">  <title>India Palace</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto&display=swap" rel="stylesheet">
@@ -11,17 +11,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
   <style>
-   body {
-  width: 1280px;
-  min-width: 1280px;
-  max-width: 1280px;
+ body {
+  max-width: 1200px;
   margin: 0 auto;
   overflow-x: auto;
 }
 .container {
-  width: 1280px;
-  min-width: 1280px;
-  max-width: 1280px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
     
     
