--- a/index.html
+++ b/index.html
@@ -65,97 +65,119 @@
       color: #d62828;
     }
 
-    .main-section {
-      display: flex;
-      align-items: center;
-      height: 100vh;
-      padding-left: 80px;
-      padding-top: 70px;
-    }
+   
 
-    .text-content {
-      max-width: 600px;
-      background-color: #000000;
-      padding: 30px;
-      border-radius: 10px;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      flex-shrink: 0;
-    }
+   
+   .bdm-hero-section {
+  width: 100vw;
+  min-height: 600px;
+  position: relative;
+  overflow: hidden;
+  background: #000;
+}
+.bdm-hero-bg-img {
+  position: absolute;
+  top: 0; left: 0; height: 100%; width: 100vw; z-index: 1;
+  background: url('https://cdn.pixabay.com/photo/2017/12/10/14/47/pizza-3010062_1280.jpg') right center / cover no-repeat;
+}
+.bdm-hero-fade {
+  position: absolute;
+  top: 0; left: 0; height: 100%; width: 100vw;
+  background: linear-gradient(90deg, #000 0%, #000 40%, #000c 60%, transparent 80%);
+  z-index: 2;
+}
+.bdm-hero-content {
+  position: relative;
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  min-height: 600px;
+  width: 100vw;
+  max-width: 1620px;
+  margin: 0 auto;
+  padding: 0 5vw;
+}
+.bdm-hero-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 820px;
+  width: 100%;
+}
+.bdm-hero-subtitle {
+  font-size: 18px;
+  letter-spacing: 1.6px;
+  color: #ffd700;
+  font-family: 'Righteous', cursive;
+  margin-bottom: 18px;
+  font-weight: 500;
+}
+.bdm-hero-title {
+  font-family: 'Righteous', cursive;
+  font-size: 6vw;
+  min-font-size: 2.6rem;
+  letter-spacing: 4px;
+  font-weight: 900;
+  color: #fff;
+  line-height: 1.09;
+  margin-bottom: 32px;
+  margin-top: 0;
+  text-align: left;
+  width: 100%;
+  max-width: 1400px;
+  text-shadow: 0 2px 28px #000a, 0 1.5px 6px #fff6;
+}
+.bdm-hero-desc {
+  color: #fff;
+  font-size: 1.37rem;
+  line-height: 1.7;
+  max-width: 900px;
+  margin-bottom: 38px;
+  text-align: left;
+}
+.bdm-hero-btns {
+  display: flex;
+  gap: 18px;
+  flex-wrap: wrap;
+}
+.bdm-btn {
+  display: inline-block;
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  font-weight: 800;
+  font-size: 19px;
+  padding: 15px 44px;
+  text-decoration: none;
+  box-shadow: 0 4px 18px 0 rgba(30, 30, 30, 0.28);
+  transition: background 0.17s, color 0.17s, box-shadow 0.17s, border 0.17s;
+  cursor: pointer;
+  margin-bottom: 8px;
+}
+.bdm-btn-order {
+  background: #970b0b;
+  color: #fff;
+  box-shadow: 0 4px 22px 0 #970b0b55, 0 1.5px 8px 0 #000a;
+}
+.bdm-btn-order:hover, .bdm-btn-order:focus {
+  background: #b90e0e;
+  color: #fff;
+  box-shadow: 0 6px 32px 0 #970b0b99, 0 2px 12px 0 #000c;
+}
+.bdm-btn-reserve {
+  background: #494848;
+  color: #fff;
+  border: 2px solid #494848;
+  box-shadow: 0 4px 22px 0 #49484844, 0 1.5px 8px 0 #000a;
+}
+.bdm-btn-reserve:hover, .bdm-btn-reserve:focus {
+  background: #313131;
+  color: #fff;
+  border: 2px solid #313131;
+  box-shadow: 0 6px 32px 0 #49484899, 0 2px 12px 0 #000c;
+}
 
-    .subtitle {
-      font-size: 18px;
-      margin-bottom: 10px;
-      color: white;
-    }
-
-    .restaurant-name {
-      font-family: 'Righteous', cursive;
-      font-size: 60px;
-      margin: 0;
-      line-height: 1;
-      color: white;
-    }
-
-    .description {
-      font-family: 'Roboto', sans-serif;
-      font-size: 16px;
-      margin-top: 20px;
-      line-height: 1.6;
-      color: white;
-    }
-
-    .buttons {
-      margin-top: 20px;
-      display: flex;
-      gap: 20px;
-    }
-
-    button {
-      padding: 12px 28px;
-      border: none;
-      border-radius: 6px;
-      font-size: 16px;
-      font-family: 'Roboto', sans-serif;
-      cursor: pointer;
-      box-shadow: 0 4px 6px rgba(255, 255, 255, 0.2);
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
-      color: white;
-    }
-
-    button#order-now {
-      background-color: #970b0b;
-    }
-
-    button#order-now:hover {
-      background-color: #b31919;
-      box-shadow: 0 6px 10px rgba(217, 31, 31, 0.5);
-    }
-
-    button#table-reservations {
-      background-color: #494848;
-    }
-
-    button#table-reservations:hover {
-      background-color: #6a6a6a;
-      box-shadow: 0 6px 10px rgba(128, 128, 128, 0.5);
-    }
-
-    .image-content {
-      position: relative;
-      flex-grow: 1;
-      height: 100vh;
-      overflow: hidden;
-      border-radius: 0;
-    }
-     {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+ 
 
     body {
       background-color: #000;
@@ -507,29 +529,36 @@
       <a href="#">Contact Us</a>
     </nav>
   </header>
+<!-- MAIN HERO SECTION - All class names prefixed with 'bdm-', button classes changed, styles updated accordingly -->
 
-  <!-- Main Section -->
-  <div class="main-section">
-    <div class="text-content">
-      <div class="subtitle">Authentic Indian Food</div>
-      <h1 class="restaurant-name">INDIA PALACE</h1>
-      <p class="description">
-        At our restaurant, we bring you the bold and vibrant flavors of India with a modern touch.
-        Enjoy a menu full of authentic recipes, made with fresh ingredients and cooked to perfection.
-        Whether you're looking for a casual meal or a special evening out, we offer the perfect setting to relax and indulge.<br><br>
+<section id="bdm-hero" class="bdm-hero-section">
+  <!-- Background Image (right side) -->
+  <div class="bdm-hero-bg-img">
+    <!-- Black fade overlay (left side) -->
+    <div class="bdm-hero-fade"></div>
+  </div>
+  <!-- TEXT CONTENT on top of fade -->
+  <div class="bdm-hero-content">
+    <div class="bdm-hero-text">
+      <div class="bdm-hero-subtitle">
+        Authentic Indian Food
+      </div>
+      <h1 class="bdm-hero-title">
+        INDIA PALACE
+      </h1>
+      <div class="bdm-hero-desc">
+        At our restaurant, we bring you the bold and vibrant flavors of India with a modern touch. Enjoy a menu full of authentic recipes, made with fresh ingredients and cooked to perfection. Whether you're looking for a casual meal or a special evening out, we offer the perfect setting to relax and indulge.<br><br>
         We’re proudly situated in the center of Yerevan, close to Republic Square.
-      </p>
-
-      <div class="buttons">
-        <button id="order-now">Order Now</button>
-        <button id="table-reservations">Table Reservations</button>
+      </div>
+      <div class="bdm-hero-btns">
+        <a href="#order" class="bdm-btn bdm-btn-order">Order Now</a>
+        <a href="#reservations" class="bdm-btn bdm-btn-reserve">Table Reservations</a>
       </div>
     </div>
-
-    <div class="image-content">
-      <img src="https://cdn.pixabay.com/photo/2024/08/01/19/25/ai-generated-8938045_1280.jpg" alt="Indian Food Image"/>
-    </div>
   </div>
+</section>
+
+
 
   <h2>🔥 Popular Items</h2>
 
