--- a/index.html
+++ b/index.html
@@ -515,6 +515,25 @@
   will-change: transform;
 }
 
+
+    @media (max-width: 1200px) {
+  .bdm-hero-content { max-width:99vw !important;}
+  .bdm-hero-title { font-size:2rem !important; }
+  .bdm-hero-desc { font-size:0.98rem !important;}
+}
+@media (max-width: 900px) {
+  .bdm-hero-content { min-height:320px !important; }
+  .bdm-hero-title { font-size:1.5rem !important;}
+  .bdm-hero-text { max-width:97vw !important;}
+  .bdm-hero-desc { max-width:98vw !important;}
+}
+@media (max-width: 600px) {
+  .bdm-hero-section { padding:0 !important; }
+  .bdm-hero-title { font-size:1.1rem !important;}
+  .bdm-btn { font-size:13px !important; padding:8px 15px !important;}
+  .bdm-hero-desc { max-width:99vw !important;}
+}
+
   </style>
 </head>
 <body>
