--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   background: linear-gradient(90deg, #000 0%, #000 40%, #000c 60%, transparent 80%);
   z-index: 2;
 }
+/* HERO SECTION CHANGES */
 .bdm-hero-content {
   position: relative;
   z-index: 3;
@@ -98,13 +99,11 @@
   max-width: 1620px;
   margin: 0 auto;
   padding: 0 5vw;
+  /* ensure child uses only half width */
 }
-.bdm-hero-text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  max-width: 820px;
-  width: 100%;
+.bdm-hero-text-half {
+  max-width: 50vw;
+  width: 50vw;
 }
 .bdm-hero-subtitle {
   font-size: 13px;
@@ -114,27 +113,25 @@
   margin-bottom: 13px;
   font-weight: 500;
 }
-.bdm-hero-title {
-  font-family: 'Righteous', cursive;
-  font-size: 3vw;
-  min-font-size: 1.5rem;
-  letter-spacing: 4px;
+.bdm-hero-title-big {
+  font-size: 5vw !important;
+  min-font-size: 2.5rem;
+  width: 100%;
+  max-width: 100%;
   font-weight: 900;
-  color: #fff;
-  line-height: 1.1;
+  text-align: left;
   margin-bottom: 20px;
   margin-top: 0;
-  text-align: left;
-  width: 100%;
-  max-width: 1400px;
+  letter-spacing: 4px;
+  color: #fff;
   text-shadow: 0 2px 18px #000a, 0 1.5px 6px #fff6;
 }
-.bdm-hero-desc {
+.bdm-hero-desc-small {
+  font-size: 0.95rem !important;
   color: #fff;
-  font-size: 1rem;
-  line-height: 1.6;
-  max-width: 900px;
-  margin-bottom: 24px;
+  max-width: 600px;
+  line-height: 1.5;
+  margin-bottom: 18px;
   text-align: left;
 }
 .bdm-hero-btns {
@@ -179,21 +176,7 @@
   box-shadow: 0 6px 32px 0 #49484899, 0 2px 12px 0 #000c;
 }
 
-/* Responsive styles */
-@media (max-width: 900px) {
-  .bdm-hero-content { min-height:320px !important; }
-  .bdm-hero-title { font-size: 2rem !important;}
-  .bdm-hero-text { max-width:97vw !important;}
-  .bdm-hero-desc { max-width:98vw !important;}
-}
 
-@media (max-width: 600px) {
-  .bdm-hero-section { padding:0 !important; }
-  .bdm-hero-title {
-    font-size: 2.2rem !important; /* Big and prominent on mobile */
-    line-height: 1.13 !important;
-    margin-bottom: 13px !important;
-  }
   .bdm-hero-subtitle {
     font-size: 10px !important;
     margin-bottom: 7px !important;
@@ -567,26 +550,21 @@
       <a href="#">About Us</a>
       <a href="#">Contact Us</a>
     </nav>
-  </header><!-- MAIN HERO SECTION - Responsive: Desktop great, Mobile: "INDIA PALACE" still big, description & subtitle much smaller, all bdm- classes -->
-
+ <!-- MAIN HERO SECTION - Updated -->
 <section id="bdm-hero" class="bdm-hero-section">
-  <!-- Background Image (right side) -->
   <div class="bdm-hero-bg-img">
-    <!-- Black fade overlay (left side) -->
     <div class="bdm-hero-fade"></div>
   </div>
-  <!-- TEXT CONTENT on top of fade -->
   <div class="bdm-hero-content">
-    <div class="bdm-hero-text">
+    <div class="bdm-hero-text bdm-hero-text-half">
       <div class="bdm-hero-subtitle">
         Authentic Indian Food
       </div>
-      <h1 class="bdm-hero-title">
+      <h1 class="bdm-hero-title bdm-hero-title-big">
         INDIA PALACE
       </h1>
-      <div class="bdm-hero-desc">
-        At our restaurant, we bring you the bold and vibrant flavors of India with a modern touch. Enjoy a menu full of authentic recipes, made with fresh ingredients and cooked to perfection. Whether you're looking for a casual meal or a special evening out, we offer the perfect setting to relax and indulge.<br><br>
-        We’re proudly situated in the center of Yerevan, close to Republic Square.
+      <div class="bdm-hero-desc bdm-hero-desc-small">
+        At our restaurant, we bring you the bold and vibrant flavors of India with a modern touch. Enjoy a menu full of authentic recipes, made with fresh ingredients and cooked to perfection. Whether you’re craving spicy curries, fragrant biryanis, or delicious tandoori dishes, we have something for everyone. We’re proudly situated in the center of Yerevan, close to Republic Square.
       </div>
       <div class="bdm-hero-btns">
         <a href="#order" class="bdm-btn bdm-btn-order">Order Now</a>
