--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
   <style>
- body {
+  body {
   width: 1280px;
   min-width: 1280px;
   max-width: 1280px;
   margin: 0 auto;
   overflow-x: auto;
-  background-color: #000;
-  font-family: 'Poppins', sans-serif;
-  color: white;
-  padding: 40px 20px;
 }
 .container {
   width: 1280px;
@@ -73,6 +69,8 @@
       color: #d62828;
     }
 
+
+
    
 .bdm-hero-section {
   width: 100vw;
@@ -92,7 +90,6 @@
   background: linear-gradient(90deg, #000 0%, #000 40%, #000c 60%, transparent 80%);
   z-index: 2;
 }
-/* HERO SECTION CHANGES */
 .bdm-hero-content {
   position: relative;
   z-index: 3;
@@ -104,50 +101,43 @@
   margin: 0 auto;
   padding: 0 5vw;
 }
-.bdm-hero-text-half {
-  max-width: 50vw;
-  width: 50vw;
-}
-.bdm-hero-title-big {
-  font-size: 5vw !important;
-  min-font-size: 2.5rem;
+.bdm-hero-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 820px;
   width: 100%;
-  max-width: 100%;
+}
+.bdm-hero-subtitle {
+  font-size: 13px;
+  letter-spacing: 1.6px;
+  color: #ffd700;
+  font-family: 'Righteous', cursive;
+  margin-bottom: 13px;
+  font-weight: 500;
+}
+.bdm-hero-title {
+  font-family: 'Righteous', cursive;
+  font-size: 4vw; /* CHANGED: was 3vw */
+  min-font-size: 2.5rem; /* CHANGED: was 1.5rem */
+  letter-spacing: 4px;
   font-weight: 900;
-  text-align: left;
+  color: #fff;
+  line-height: 1.1;
   margin-bottom: 20px;
   margin-top: 0;
-  letter-spacing: 4px;
-  color: #fff;
+  text-align: left;
+  width: 100%;
+  max-width: 1400px;
   text-shadow: 0 2px 18px #000a, 0 1.5px 6px #fff6;
 }
-.bdm-hero-desc-small {
-  font-size: 0.95rem !important;
+.bdm-hero-desc {
   color: #fff;
-  max-width: 600px;
-  line-height: 1.5;
-  margin-bottom: 18px;
+  font-size: 0.9rem; /* CHANGED: was 1rem */
+  line-height: 1.6;
+  max-width: 900px;
+  margin-bottom: 24px;
   text-align: left;
-}
-/* Responsive adjustments */
-@media (max-width: 900px) {
-  .bdm-hero-content { min-height:320px !important; }
-  .bdm-hero-text-half { max-width:97vw !important; width:97vw !important;}
-  .bdm-hero-title-big { font-size: 2.3rem !important;}
-  .bdm-hero-desc-small { max-width:98vw !important; font-size: 0.89rem !important;}
-}
-@media (max-width: 600px) {
-  .bdm-hero-text-half { max-width: 99vw !important; width: 99vw !important;}
-  .bdm-hero-title-big {
-    font-size: 2.5rem !important;
-    margin-bottom: 13px !important;
-  }
-  .bdm-hero-desc-small {
-    font-size: 12px !important;
-    max-width: 99vw !important;
-    margin-bottom: 17px !important;
-    line-height: 1.45 !important;
-  }
 }
 .bdm-hero-btns {
   display: flex;
@@ -191,13 +181,27 @@
   box-shadow: 0 6px 32px 0 #49484899, 0 2px 12px 0 #000c;
 }
 
+/* Responsive styles */
+@media (max-width: 900px) {
+  .bdm-hero-content { min-height:320px !important; }
+  .bdm-hero-title { font-size: 2.7rem !important;} /* CHANGED: was 2rem */
+  .bdm-hero-text { max-width:97vw !important;}
+  .bdm-hero-desc { max-width:98vw !important;}
+}
 
+@media (max-width: 600px) {
+  .bdm-hero-section { padding:0 !important; }
+  .bdm-hero-title {
+    font-size: 2.7rem !important; /* CHANGED: was 2.2rem */
+    line-height: 1.13 !important;
+    margin-bottom: 13px !important;
+  }
   .bdm-hero-subtitle {
     font-size: 10px !important;
     margin-bottom: 7px !important;
   }
   .bdm-hero-desc {
-    font-size: 12px !important;
+    font-size: 11px !important; /* CHANGED: was 12px */
     max-width: 99vw !important;
     margin-bottom: 17px !important;
     line-height: 1.45 !important;
@@ -211,8 +215,6 @@
     max-width: 99vw !important;
   }
 }
-   
-
  
     body {
       background-color: #000;
@@ -565,21 +567,26 @@
       <a href="#">About Us</a>
       <a href="#">Contact Us</a>
     </nav>
- <!-- MAIN HERO SECTION - Updated -->
+  </header><!-- MAIN HERO SECTION - Responsive: Desktop great, Mobile: "INDIA PALACE" still big, description & subtitle much smaller, all bdm- classes -->
+
 <section id="bdm-hero" class="bdm-hero-section">
+  <!-- Background Image (right side) -->
   <div class="bdm-hero-bg-img">
+    <!-- Black fade overlay (left side) -->
     <div class="bdm-hero-fade"></div>
   </div>
+  <!-- TEXT CONTENT on top of fade -->
   <div class="bdm-hero-content">
-    <div class="bdm-hero-text bdm-hero-text-half">
+    <div class="bdm-hero-text">
       <div class="bdm-hero-subtitle">
         Authentic Indian Food
       </div>
-      <h1 class="bdm-hero-title bdm-hero-title-big">
+      <h1 class="bdm-hero-title">
         INDIA PALACE
       </h1>
-      <div class="bdm-hero-desc bdm-hero-desc-small">
-        At our restaurant, we bring you the bold and vibrant flavors of India with a modern touch. Enjoy a menu full of authentic recipes, made with fresh ingredients and cooked to perfection. Whether you’re craving spicy curries, fragrant biryanis, or delicious tandoori dishes, we have something for everyone. We’re proudly situated in the center of Yerevan, close to Republic Square.
+      <div class="bdm-hero-desc">
+        At our restaurant, we bring you the bold and vibrant flavors of India with a modern touch. Enjoy a menu full of authentic recipes, made with fresh ingredients and cooked to perfection. Whether you're looking for a casual meal or a special evening out, we offer the perfect setting to relax and indulge.<br><br>
+        We’re proudly situated in the center of Yerevan, close to Republic Square.
       </div>
       <div class="bdm-hero-btns">
         <a href="#order" class="bdm-btn bdm-btn-order">Order Now</a>
