--- a/index.html
+++ b/index.html
@@ -180,6 +180,18 @@
   border: 2px solid #313131;
   box-shadow: 0 6px 32px 0 #49484899, 0 2px 12px 0 #000c;
 }
+    @media (max-width: 600px) {
+  .bdm-hero-desc {
+    font-size: 12px !important;
+    max-width: 99vw !important;
+    margin-bottom: 17px !important;
+    line-height: 1.45 !important;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;      /* Show only 3 lines */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+}
 
 
  
