--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   width: 100%;
 }
 .bdm-hero-subtitle {
-  font-size: 13px;
+  font-size: 18px;
   letter-spacing: 1.6px;
   color: #ffd700;
   font-family: 'Righteous', cursive;
@@ -118,7 +118,7 @@
 }
 .bdm-hero-title {
   font-family: 'Righteous', cursive;
-  font-size: 4vw; /* CHANGED: was 3vw */
+  font-size: 7vw; /* CHANGED: was 3vw */
   min-font-size: 2.5rem; /* CHANGED: was 1.5rem */
   letter-spacing: 4px;
   font-weight: 900;
@@ -133,9 +133,9 @@
 }
 .bdm-hero-desc {
   color: #fff;
-  font-size: 0.9rem; /* CHANGED: was 1rem */
+  font-size: 0.7rem; /* CHANGED: was 1rem */
   line-height: 1.6;
-  max-width: 900px;
+  max-width: 1000px;
   margin-bottom: 24px;
   text-align: left;
 }
@@ -180,19 +180,7 @@
   border: 2px solid #313131;
   box-shadow: 0 6px 32px 0 #49484899, 0 2px 12px 0 #000c;
 }
-    @media (max-width: 600px) {
-  .bdm-hero-desc {
-    font-size: 12px !important;
-    max-width: 99vw !important;
-    margin-bottom: 17px !important;
-    line-height: 1.45 !important;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;      /* Show only 3 lines */
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-  }
-}
-
+  
 
  
     body {
@@ -564,8 +552,7 @@
         INDIA PALACE
       </h1>
       <div class="bdm-hero-desc">
-        At our restaurant, we bring you the bold and vibrant flavors of India with a modern touch. Enjoy a menu full of authentic recipes, made with fresh ingredients and cooked to perfection. Whether you're looking for a casual meal or a special evening out, we offer the perfect setting to relax and indulge.<br><br>
-        We’re proudly situated in the center of Yerevan, close to Republic Square.
+        At our restaurant, we bring you the bold and vibrant flavors of India with a modern touch. Enjoy a menu full of authentic recipes, made with fresh ingredients and cooked to perfection. Whether you're looking for a casual meal or a special evening out, we offer the perfect setting to relax and indulge. We’re proudly situated in the center of Yerevan, close to Republic Square.
       </div>
       <div class="bdm-hero-btns">
         <a href="#order" class="bdm-btn bdm-btn-order">Order Now</a>
