--- a/index.html
+++ b/index.html
@@ -882,13 +882,15 @@
   <div style="
     text-align:center;
     width:100%;
-    font-size:15px;
+    font-size:10px;
     color:#ffd700;
     font-family:'Roboto',sans-serif;
     font-weight:500;
     margin-bottom:38px;
     ">
-    At INDIA PALACE Indian Restaurant, we believe that food is a celebration of life and that traditional foods are an enduring part of our culture.
+         <h3 style="font-size:25px;margin-bottom:10px;font-weight:400;color:#ffd700;font-family:'Righteous',cursive;">
+
+    At INDIA PALACE Indian Restaurant, we believe that food is a celebration of life and that traditional foods are an enduring part of our culture. </h3>
   </div>
   <!-- Content Row: Text | Image -->
   <div style="display:flex;flex-direction:row;align-items:stretch;height:420px;gap:0;">
